Deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "shabes-holidays-reminder-k8s"
  namespace: "qa"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "shabes-holidays-reminder-k8s"
  template:
    metadata:
      labels:
        app: "shabes-holidays-reminder-k8s"
    spec:
      containers:
        - name: "shabes-holidays-reminder-k8s"
          image: "itayp/shabes-holidays-reminder-k8s:84"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: "/health"
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: "/health"
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 3
