Service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "shabes-holidays-reminder-k8s"
  namespace: "qa"
spec:
  type: "ClusterIP"
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: "shabes-holidays-reminder-k8s"
